# zack

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  event.rs  main.rs  ui.rs
src/app/: buffer.rs  cursor.rs  file.rs  mod.rs  modes.rs
src/app/cursor/: mod.rs
src/app/modes/: insert.rs  mod.rs  normal.rs  visual.rs
src/event/: app_events.rs  event_handler.rs  mod.rs
src/types/: position.rs
src/ui/: mod.rs
src/ui/components/: editor.rs  filename_prompt.rs  mod.rs
