[package]
name = "zack"
version = "0.1.0"
description = "TUI Text editor"
authors = ["Henrique Luhm"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
ropey = "1.6.1"
log = "0.4"
simplelog = { version = "0.12", optional = true }

[features]
default = []
debug-logs = ["simplelog"]
